--- a/megamenu-preact-app/package.json
+++ b/megamenu-preact-app/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1",
